--- a/app/views/home/_current_round.html.haml
+++ b/app/views/home/_current_round.html.haml
@@ -1,4 +1,4 @@
-%h3= t('jornada_acb', round: CURRENT_ROUND)
+%h3= t('jornada_acb', round: ENV["CURRENT_ROUND"])
 .games
   - @games.each do |game|
     - if game
