--- a/app/views/players/_temporada_players.haml
+++ b/app/views/players/_temporada_players.haml
@@ -1,4 +1,4 @@
-%tr{:class => [player['position'], player['team']['rest_round_1'] == CURRENT_ROUND || player['team']['rest_round_2'] == CURRENT_ROUND ? "descansa" : ""]}
+%tr{:class => [player['position'], player['team']['rest_round_1'] == ENV["CURRENT_SEASON"] || player['team']['rest_round_2'] == ENV["CURRENT_SEASON"] ? "descansa" : ""]}
   %td
     = player_image player, "height_22"
     = team_image player['team'], 'height_22'
@@ -8,14 +8,14 @@
   %td
     = player_price(current_price(player))
   %td
-    = played_games player, CURRENT_SEASON
+    = played_games player, ENV["CURRENT_SEASON"]
   %td
-    = total_minutos player, CURRENT_SEASON
+    = total_minutos player, ENV["CURRENT_SEASON"]
   %td
-    = promedio_minutos player, CURRENT_SEASON
+    = promedio_minutos player, ENV["CURRENT_SEASON"]
   %td
     %b=sum.sum.round(2)
   %td.important
-    = promedio_stat player, @field, CURRENT_SEASON
+    = promedio_stat player, @field, ENV["CURRENT_SEASON"]
   %td
-    = por_40_minutos player, @field, CURRENT_SEASON
+    = por_40_minutos player, @field, ENV["CURRENT_SEASON"]
