--- a/app/views/players/index.html.haml
+++ b/app/views/players/index.html.haml
@@ -1,6 +1,6 @@
 .row
   .col-xs-12
-    %h1= t('.title', season: CURRENT_SEASON)
+    %h1= t('.title', season: ENV["CURRENT_SEASON"])
 
 .row
   .col-xs-12
