--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -1,6 +1,6 @@
 .row
   .col-xs-12
-    %h1= t(".title", season: CURRENT_SEASON)
+    %h1= t(".title", season: ENV["CURRENT_SEASON"])
   .col-xs-12
     %table.table.statistic
       %thead
