--- a/app/views/players/_mejores_jornada_player.html.haml
+++ b/app/views/players/_mejores_jornada_player.html.haml
@@ -1,12 +1,12 @@
-%tr{:class => [player['position'], player['team']['rest_round_1'] == ENV["CURRENT_ROUND"] || player['team']['rest_round_2'] == ENV["CURRENT_ROUND"] ? "descansa" : ""]}
+%tr{:class => [statistic['player']['position'], statistic['player']['team']['rest_round_1'] == ENV["CURRENT_ROUND"] || statistic['player']['team']['rest_round_2'] == ENV["CURRENT_ROUND"] ? "descansa" : ""]}
   %td
-    = player_image player, "height_22"
-    = team_image player['team'], 'height_22' 
+    = player_image statistic['player'], "height_22"
+    = team_image statistic['player']['team'], 'height_22' 
   %td
-    = playing_cup player['team']['name'] 
-    = link_to player['name'], player_url(player)
+    = playing_cup statistic['player']['team']['name'] 
+    = link_to statistic['player']['name'], player_url(statistic['player'])
   %td
-    = player_price(current_price(player))
+    = player_price(current_price(statistic['player']))
   %td{:class => ("important" if field == "sm")}= statistic["week_"+round]["sm"].blank? ? "0" : statistic["week_"+round]["sm"]
   %td{:class => ("important" if field == "v")}= statistic["week_"+round]["v"].blank? ? "0" : statistic["week_"+round]["v"]
   %td{:class => ("important" if field == "pt")}= statistic["week_"+round]["pt"].blank? ? "0" : statistic["week_"+round]["pt"]
